--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && sh build_extra.sh",
     "serve": "vite preview"
   },
   "license": "MIT",
