--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.7",
     "vite-plugin-solid": "^2.7.0"
   },
   "dependencies": {
+    "@solidjs/router": "^0.8.2",
     "@types/diff": "^5.0.3",
     "diff": "^5.1.0",
     "solid-headless": "^0.13.1",
-    "solid-heroicons": "^3.2.3",
-    "solid-js": "^1.7.6",
+    "solid-heroicons": "^3.2.4",
+    "solid-js": "^1.7.8",
     "xlsx": "^0.18.5"
   }
 }
