--- a/package.json
+++ b/package.json
@@ -6,24 +6,27 @@
     "prestart": "npx only-allow pnpm",
     "dev": "vite",
     "build": "vite build && sh build_extra.sh",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "format": "prettier --write ."
   },
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.7",
-    "vite-plugin-solid": "^2.7.0"
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4",
+    "vite-plugin-solid": "^2.10.1"
   },
   "dependencies": {
-    "@solidjs/router": "^0.8.2",
-    "@types/diff": "^5.0.3",
-    "diff": "^5.1.0",
+    "@solidjs/router": "^0.12.4",
+    "@types/diff": "^5.0.9",
+    "diff": "^5.2.0",
     "solid-headless": "^0.13.1",
     "solid-heroicons": "^3.2.4",
-    "solid-js": "^1.7.8",
+    "solid-js": "^1.8.15",
     "xlsx": "^0.18.5"
   }
 }
