--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "prettier": "3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4",
-    "vite-plugin-solid": "^2.10.1"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "prettier": "3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.2",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.13",
+    "vite-plugin-solid": "^2.10.2"
   },
   "dependencies": {
-    "@solidjs/router": "^0.12.4",
-    "@types/diff": "^5.0.9",
+    "@solidjs/router": "^0.13.5",
+    "@types/diff": "^5.2.1",
     "diff": "^5.2.0",
     "solid-headless": "^0.13.1",
     "solid-heroicons": "^3.2.4",
-    "solid-js": "^1.8.15",
-    "xlsx": "^0.18.5"
+    "solid-js": "^1.8.17",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   }
 }
